[workspace]

# https://bevyengine.org/learn/book/getting-started/setup/#cargo-workspaces
resolver = "2"

members = [
    "feature/debug_info",
    "client",
]


[workspace.dependencies]
# Основной графический движок
bevy = "0.12"

# egui - библиотека графического интерфейса для Rust, a bevy_egui - библиотека для работы с интефесами egui внутри bevy
bevy_egui = "0.24"
